// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarDetailsPage component shallow renders without crashing 1`] = `
Array [
  <header
    className="header"
  >
    <div
      className="header-logo"
    >
      <img
        alt="Company"
        className="logo"
        src="company-logo.png"
      />
    </div>
    <div
      className="header-menu"
    >
      <a
        className="header-link"
        href="##"
      >
        Purchase
      </a>
      <a
        className="header-link"
        href="##"
      >
        My Orders
      </a>
      <a
        className="header-link"
        href="##"
      >
        Sell
      </a>
    </div>
  </header>,
  <div
    className="error-box"
  >
    Data is Loading...
  </div>,
  <footer
    className="footer"
  >
    <div
      className="copyright"
    >
      © AUTO1 Group 2018
    </div>
  </footer>,
]
`;

exports[`PageNouFoundPage component shallow renders without crashing 1`] = `
Array [
  <header
    className="header"
  >
    <div
      className="header-logo"
    >
      <img
        alt="Company"
        className="logo"
        src="company-logo.png"
      />
    </div>
    <div
      className="header-menu"
    >
      <a
        className="header-link"
        href="##"
      >
        Purchase
      </a>
      <a
        className="header-link"
        href="##"
      >
        My Orders
      </a>
      <a
        className="header-link"
        href="##"
      >
        Sell
      </a>
    </div>
  </header>,
  <section
    class="page-not-found"
  >
    <img
      alt="Company"
      className="logo"
      src="company-logo.png"
    />
    <header>
      404 - Not Found
    </header>
    <p
      className="text"
    >
      Sorry, the page you are looking for does not exist.
    </p>
    <p
      className="text"
    >
      You can always go back to
       
      <a
        className="link"
        href="/"
      >
        homepage
      </a>
    </p>
  </section>,
  <footer
    className="footer"
  >
    <div
      className="copyright"
    >
      © AUTO1 Group 2018
    </div>
  </footer>,
]
`;
